kubernetes/apps/toolhive/operator/app/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-toolhive-operator
  namespace: toolhive-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: toolhive-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-toolhive-operator-apiserver
  namespace: toolhive-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: toolhive-operator
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-toolhive-proxyrunner-apiserver
  namespace: toolhive
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mcpserver
      toolhive: "true"
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-toolhive-mcp
  namespace: toolhive
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openwebui
          podSelector:
            matchLabels:
              app.kubernetes.io/name: openwebui
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
    - to:
        - podSelector: {}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
